# library

./: .gitignore  print_bits.c  work_out_f.c
Exam progs/brainfuck/: brainfuck.c
Get_next_line/: Makefile  ft_bzero.c  ft_strclr.c  ft_strcmp.c  ft_strnew.c  get_next_line.c  get_next_line.h
Piscine Reloaded/: MAC.sh  Makefile  exo.tar  ft.h  ft_abs.h  ft_count_if.c  ft_display_file.c  ft_div_mod.c  ft_foreach.c  ft_is_negative.c  ft_iterative_factorial.c  ft_print_numbers.c  ft_print_params.c  ft_putchar.c  ft_putstr.c  ft_strcmp.c  ft_strdup.c  ft_strlen.c  ft_swap.c  ft_test_point.c
fillit/: Makefile  author  fillit.c  fillit.h  make_map.c  vld_ttrm.c
fillit/libft/: Makefile  (+6 more)
ft_printf/: CMakeLists.txt  Makefile  README.md  author  ft_is_flag.c  ft_printf.c  ft_printf.h  ft_strlen.c  ft_strnew.c  ft_work_out.c  handle_c.c  handle_d.c  handle_f.c  handle_f_continue.c  handle_f_more.c  handle_o.c  handle_p.c  handle_percent.c  handle_s.c  handle_u.c  handle_x.c  long_math.c  m.c  main.c  parse.c  parse_continue.c  parse_format.c  print_char.c  str_longmath.c  work_out_char.c  work_out_f.c  work_out_uxo.c
libft/: Makefile  ft_atoi.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_lstadd.c  ft_lstdel.c  ft_memalloc.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_print_alphabet.c  ft_range.c  ft_sort_params.c  ft_sqrt.c  ft_strchr.c  ft_strcmp.c  ft_strdel.c  ft_strequ.c  ft_strjoin.c  ft_strlcat.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strstr.c  ft_strsub.c  ft_tolower.c  libft.h
push_swap/: .gitignore  Makefile  checker.c  push_swap.c
(+89 files in other folders)
